// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the gameList item 1`] = `
<div
<<<<<<< HEAD
  className="game-link"
>
  <a
    href="/game/79335/18"
    onClick={[Function]}
  >
    <p
      className="nes-text is-primary"
    >
      Double Dragon III: The Sacred Stones
    </p>
  </a>
</div>
`;

exports[`renders the saved games component 1`] = `
<div
  className="sc-gzVnrw jnuoKt"
>
  <h1>
    fake@fake.com
=======
  className="sc-EHOje kaDGtO"
>
  <h1>
>>>>>>> d6254eeabc601f61666a349ccec4f094319235ca
    's List of Games
  </h1>
  <div
    className="games-list"
  >
    <div
      className="game-list nes-container is-rounded"
    >
      <h2>
        NES Games
      </h2>
      <div
        className="game-link"
      >
        <a
          href="/game/79335/18"
          onClick={[Function]}
        >
          <p
            className="nes-text is-primary"
          >
            Double Dragon III: The Sacred Stones
          </p>
        </a>
      </div>
    </div>
    <div
      className="game-list nes-container is-rounded"
    >
      <h2>
        SNES Games
      </h2>
    </div>
    <div
      className="game-list nes-container is-rounded"
    >
      <h2>
        64 Games
      </h2>
    </div>
    <div
      className="game-list nes-container is-rounded"
    >
      <h2>
        Game Cube Games
      </h2>
    </div>
  </div>
</div>
`;
